examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__import_from_statements@from ab import c.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ImportFromStatement(
                ImportFromStatement {
                    name: [
                        DottedName(
                            DottedName {
                                children: [
                                    Identifier {
                                        [RANGE]
                                    },
                                ],
                                [RANGE]
                            },
                        ),
                    ],
                    module_name: DottedName(
                        DottedName {
                            children: [
                                Identifier {
                                    [RANGE]
                                },
                                Identifier {
                                    [RANGE]
                                },
                            ],
                            [RANGE]
                        },
                    ),
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
