examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__import_statements@import bc as d.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ImportStatement(
                ImportStatement {
                    name: [
                        AliasedImport(
                            AliasedImport {
                                name: DottedName {
                                    children: [
                                        Identifier {
                                            [RANGE]
                                        },
                                        Identifier {
                                            [RANGE]
                                        },
                                    ],
                                    [RANGE]
                                },
                                alias: Identifier {
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
